# gdnsd

./: INSTALL  Makefile.am  NEWS  configure.ac
docs/: DNSSEC.md  gdnsd.config.podin  gdnsd.zonefile.podin
include/gdnsd/: compiler.h  dname.h  log.h  misc.h  rand.h
libgdmaps/: gdmaps.c
libgdnsd/: dname.c  log.c  misc.c  vscf.rl
m4/: pycheck.m4
src/: chal.c  chal.h  comp.c  comp.h  conf.c  conf.h  cookie.c  cookie.h  csc.c  csc.h  css.c  daemon.c  dnsio_tcp.c  dnsio_udp.c  dnspacket.c  dnspacket.h  dnssec.c  dnssec.h  dnssec_alg.c  dnssec_alg.h  dnssec_bench.c  dnssec_nxdc.c  dnssec_nxdc.h  dnssec_t.h  dnswire.h  gdnsdctl.c  ltree.c  ltree.h  main.c  proxy.c  proxy.h  statio.c  statio.h  stats.h  zscan_rfc1035.h  zscan_rfc1035.rl  zsrc_rfc1035.c  zsrc_rfc1035.h
src/plugins/: extmon.c  extmon_comms.c  extmon_comms.h  extmon_helper.c  http_status.c  meta_core.inc  mon.c  mon.h  multifo.c  null.c  plugapi.c  plugapi.h  reflect.c  simplefo.c  static.c  weighted.c
t/: _GDT.pm
t/003complex/: 004delegations.t  005big.t  009broken.t  012aaaa.t
t/005tld/: 020tld.t
t/006root/: 021root.t
t/007plugins/: 022trivial.t  023weighted.t  024dync.t  025metafo.t
t/013clientsub/: 039clientsub.t
t/014geoip/: 040basic.t
t/018admin/: 044admin.t
t/021caa/: 047caa.t
t/022gdnsdctl/: 049acmedns01.t
tpy/: Makefile.am  conftest.py
tpy/basic/: test_basic.py
tpy/basic/etc/: config.tmpl
tpy/dnssec_basic/: test_dnssec_basic.py
tpy/dnssec_basic/etc/: config.tmpl
tpy/dnssec_basic/etc/zones/: example.com
tpy/gdt/: __init__.py  helper.py  run_gdnsd.py
(+8 files in other folders)
